compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__use___invalid_callback_type_4.snap
---
source: compiler-core/src/type_/tests/use_.rs
expression: "\nlet x = fn(f) { \"Hello, \" <> f() }\nlet y = fn(f) { 1 + f() }\nlet z = fn(f) { 1.0 +. f() }\nuse <- x()\nuse <- y()\nlet n = 1\nuse <- z()\n1.0\n"
---
error: Type mismatch
  ┌─ /src/one/two.gleam:8:1
  │
8 │ use <- z()
  │ ^^^^^^^^^^

Expected type:

    Int

Found type:

    Float
