compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__use___typed_pattern_wrong_type.snap
---
source: compiler-core/src/type_/tests/use_.rs
expression: "\npub fn main() {\n  use Box(x): Box(Bool), Box(y), Box(z) <- apply(Box(1))\n  x + y + z\n}\n\ntype Box(a) {\n  Box(a)\n}\n\nfn apply(arg, fun) {\n  fun(arg, arg, arg)\n}\n"
---
----- SOURCE CODE

pub fn main() {
  use Box(x): Box(Bool), Box(y), Box(z) <- apply(Box(1))
  x + y + z
}

type Box(a) {
  Box(a)
}

fn apply(arg, fun) {
  fun(arg, arg, arg)
}


----- ERROR
error: Type mismatch
  ┌─ /src/one/two.gleam:3:7
  │
3 │   use Box(x): Box(Bool), Box(y), Box(z) <- apply(Box(1))
  │       ^^^^^^^^^^^^^^^^^

Expected type:

    Box(Int)

Found type:

    Box(Bool)
